<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.MenuFragment"
    android:background="#222219"
    android:alpha=".7"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal|top"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_gender"
            android:textSize="18dp"
            android:background="#222219"
            android:id="@+id/gender"
            android:textColor="#FFFFFF"
            android:onClick="onGenderButtonClick"
            android:layout_gravity="center_horizontal|top"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nsfw"
            android:textSize="18dp"
            android:background="#222219"
            android:id="@+id/nsfw"
            android:textColor="#FFFFFF"
            android:onClick="nsfwButtonClick"
            android:layout_gravity="center_horizontal|top"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_new"
            android:textSize="18dp"
            android:background="#222219"
            android:id="@+id/get_new"
            android:textColor="#FFFFFF"
            android:onClick="orderButtonClick"
            android:layout_gravity="center_horizontal|top"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_favorite"
            android:textSize="18dp"
            android:background="#222219"
            android:id="@+id/favorite"
            android:textColor="#FFFFFF"
            android:onClick="openFavoritesButtonClick"
            android:layout_gravity="center_horizontal|top"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#ffffff"
            android:layout_marginBottom="5dp"/>


        </LinearLayout>



</FrameLayout>
