<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.selfie.app.HomeActivity"
    android:focusableInTouchMode="false">

    <TextView
        android:text="@string/hello_string"
        android:textSize="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hello_message"
        android:layout_marginBottom="51dp"
        android:layout_above="@+id/space"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/girls"
        android:id="@+id/girls_button"
        android:onClick="onButtonClick"
        android:shadowRadius="5"
        android:layout_alignTop="@+id/boys_button"
        android:layout_alignLeft="@+id/hello_message" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boys"
        android:id="@+id/boys_button"
        android:onClick="onButtonClick"
        android:shadowRadius="5"
        android:layout_below="@+id/space"
        android:layout_alignRight="@+id/hello_message"
        android:layout_marginTop="54dp" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

</RelativeLayout>
